--- a/formEN.html
+++ b/formEN.html
@@ -82,6 +82,7 @@
     .checkbox-txt {
       font-weight: 400;
       margin: 0;
+      font-size: 0.72rem;
     }
 
     .checkbox-container {
@@ -115,14 +116,14 @@
             <div style="display:flex; flex-direction:column; align-items:flex-start; padding-bottom:5px;">
               <input
                 style="height:30px; width: 100%; border:2px solid #aaa; border-radius:4px; box-sizing:border-box; outline:none; font-weight:400; transition:.3s;"
-                id="emailField" type="email" placeholder="el.paštas@gmail.com" size="30" required>
+                id="emailField" type="email" placeholder="email@email-provider.com" size="30" required>
               <span id="valid-required" class="valid-error" style="padding-top:5px;">This field can not be empty.</span>
               <span id="valid-symbols" class="valid-error" style="padding-top:5px;">These symbols can not be used: (<b>“‘/$&\;</b>)</span>
             </div>
             <div class="checkbox">
               <div class="checkbox-container">
                 <input id="checkbox" type="checkbox">
-                <h5 class="checkbox-txt">I agree to subscribe to the newsletter.</h5>
+                <h5 class="checkbox-txt">I agree to receive news and marketing material.</h5>
               </div>
             </div>
           </div>
