* Updated some text in the EN form

--- a/formEN.html
+++ b/formEN.html
@@ -123,7 +123,7 @@
             <div class="checkbox">
               <div class="checkbox-container">
                 <input id="checkbox" type="checkbox">
-                <h5 class="checkbox-txt">I agree to receive news and marketing material.</h5>
+                <h5 class="checkbox-txt">I would like to receive news and marketing material.</h5>
               </div>
             </div>
           </div>
